# datasaude-api-ml

./: .env.template  .gitignore  Dockerfile  README.md  datasaude-api-ml-arm-ingress.yaml  datasaude-api-ml-arm.yaml  datasaude-api-ml-mgc-ingress.yaml  datasaude-api-ml-mgc.yaml  main.py  pyproject.toml
.github/workflows/: main.yml  production.yml  staging.yml
api/: __init__.py
api/previsao/: temporal_v1.py
api/previsao_temporal/: previsao_temporal_bo.py  previsao_temporal_repository.py  previsao_temporal_v1_rest.py  queries.py
api/previsao_temporal/schemas/: exceptions.py  previsao_temporal_schema.py
argocd-mgc/: datasaude-api-ml-mgc.yaml
core/config/: SQLAlchemyMiddleware.py  enviroments.py  session.py
